--- a/estilo.css
+++ b/estilo.css
@@ -42,6 +42,9 @@ text-align:center;
 main {
 border:20px double #FFE5F4
 }
+main p.portada{
+text-align:center;
+}
 body main p.tarta{
 text-align:center;
 }
