Animacion en la cabecera

--- a/estilo.css
+++ b/estilo.css
@@ -57,3 +57,14 @@ width:636px;
 main form{
 text-align:center;
 }
+
+
+@Keyframes cabecera{
+0% { color: #000000; }
+100% { color: pink; }
+}
+
+h1{
+animation-name:cabecera;
+animation-duration:2s;
+}
